feat: implementacion de OrdenController y integracion con GlobalExceptionHandler